--- a/public/child.html
+++ b/public/child.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -7,10 +8,15 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
+
 <body>
   <div>
     <h1>Hello, world!</h1>
-    <p>This is a child window</p>
+    <p>This is child window number:
+      <span id="winNum"></span>
+    </p>
   </div>
 </body>
+<script src="child.js"></script>
+
 </html>
